# nd

./: pyproject.toml
accident/: admin.py  forms.py  models.py  services.py  urls.py  views.py
accident/migrations/: 0001_initial.py
accident/templates/accident/: accident_confirm_delete.html  accident_detail.html  accident_form.html  accident_list.html  dangers.html  statistics.html
config/: settings.py  urls.py
learning/: admin.py  apps.py  forms.py  models.py  services.py  urls.py
learning/migrations/: 0001_initial.py
learning/models/: __init__.py  briefing.py  learner_direction.py  program_test.py  protocol.py
learning/templates/learning/: all_exam_assignment.html  (+43 more)
learning/views/: briefing.py  direction.py  direction_test.py  exam.py  knowladge_order.py  knowledge_order.py  learner.py  learning_doc_poster.py  load_docs.py  program.py  prot_test.py  protocol.py  protocol_result.py  verbal_exam.py
organization/: admin.py  forms.py  models.py  services.py  urls.py
organization/migrations/: 0001_initial.py
organization/models/: __init__.py  organization.py  staff_unit.py
organization/templatetags/: my_tags.py
organization/views/: __init__.py  branch.py  district.py  division.py  entity.py  group.py  organization.py  position.py  responsibilities.py  worker.py
patterns/: identities.docx  identity_template.docx  protocol_template.docx
permit/: apps.py  models.py  services.py  urls.py
permit/forms/: organization.py
permit/views/: organization.py
static/css/: bootstrap-icons.css
users/: admin.py  forms.py  models.py  urls.py  views.py
(+27 files in other folders)
