[tool.poetry]
name = "nd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-dotenv = "^1.1.1"
python-docx = "^1.2.0"
docxtpl = "^0.20.1"
psycopg2 = "^2.9.10"
black = "^25.9.0"
isort = "^6.1.0"
openpyxl = "^3.1.5"
setuptools = "^80.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
