[tool.poetry]
name = "nd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
black = "^25.9.0"
isort = "^6.1.0"
openpyxl = "^3.1.5"
pillow = "^12.0.0"
transliterate = "^1.10.2"
django-pg-copy = "^1.3.0"
django-smart-selects = "^1.7.2"
docxtpl = "^0.20.2"
plotly = "^6.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
